@@ -54,10 +54,7 @@ __owur static ossl_inline int ossl_assert_int(int expr, const char *exprstr,
     void *align_ptr
 
 typedef struct ex_callback_st EX_CALLBACK;
-
 DEFINE_STACK_OF(EX_CALLBACK)
-
-typedef struct app_mem_info_st APP_INFO;
 
 typedef struct mem_st MEM;
 DEFINE_LHASH_OF(MEM);
